1. Add skip to quiz page  2. fix css of number sequence to wrap long sequences

--- a/src/components/global/Banner/Banner.css
+++ b/src/components/global/Banner/Banner.css
@@ -47,6 +47,12 @@
   padding: 16px;
 }
 
+.banner-label {
+  margin-top: 4px;
+  margin-left: 16px;
+  cursor: pointer;
+}
+
 .banner-hr {
   margin-left: 20px;
   border-top: 1px solid var(--blue-02);
